fix row-gap error on .wrap-cnt container

--- a/style.css
+++ b/style.css
@@ -146,7 +146,7 @@ nav ul {
 .wrap-cnt {
   margin: 25% auto auto 10%;
   display: inline-grid;
-  row-gap: 50%;
+  row-gap: 30%;
   height: 69%;
 }
 
